# GWAS-pipeline

./: .gitignore  LICENSE  README.md  STDOUT_warnings.txt  app.py  application.py  build.sh  conda_build_config.yaml  environment.yml  environment_combined.yml  environment_lz.yml  environment_minimal.yml  environment_r.yml  environmentgpu.yml  example_dataset.csv  example_run.ipynb  ftp_genomes.py  gwasViewer.ipynb  gwas_class.ipynb  gwas_class.py  gwas_class_auto.py  gwas_cli.py  gwas_example.ipynb  gwas_report_auto.rmd  gwaspipe.py  interactiveqc.py  meta.yaml  missing_rfid_list.txt  pipemaker.py  pyblup.py  pyproject.toml  report.py  requirements.txt  run_all_project.ipynb  setup.py  statsReport.py  utils.py  vcfmanipulation.py
.ipynb_checkpoints/: condaenv.8is1f_fl.requirements-checkpoint.txt  environment-checkpoint.yml  environment_lz-checkpoint.yml  environment_r-checkpoint.yml  gwas_class_auto-checkpoint.py  gwas_cli-checkpoint.py  gwas_report_auto-checkpoint.rmd  meta-checkpoint.yaml  pipemaker-checkpoint.py  setup-checkpoint.py
example/: data_dict_example.csv  environment.yml  example_chitre_obs.ipynb  example_run.ipynb  melted_explained_variances.csv  oneproj.sh  package_versions.txt  pivot_explained_variances.csv  processed_data_ready.csv  raw_data.csv
gwas/: core.py  countvectorizer.py  genome_decomposition_v2.py  genomic_structural_model.py  genomic_structural_model_improved_v5.py  gwas.py  gwas_cli.py  gwas_cli_argparse.py  hwas.py  hwas_optimized.py  interactiveqc.py  jaxplink.py  kinship.py  (+6 more)
gwas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+62 files in other folders)
