[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gwas"
description = "A general package to run GWAS associations and visualize the results"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Thiago Sanches"},
  {name = "Apurva Chitre"}
]
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/sanchestm/GWAS-pipeline"

[project.scripts]
gwas-cli = "gwas.gwas_cli:main"
gwas-cli-argparse = "gwas.gwas_cli_argparse:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["gwas*"]     # picks up gwas and any sub-packages

[tool.setuptools_scm]
version_scheme = "post-release"       # or another scheme you like
local_scheme   = "node-and-date"